Fixing overflow and positioning
honestly, not crazy broken

--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,7 @@
     #body {
         float: center;
         display: flex;
+        overflow: auto;
         flex-direction: column;
         position: relative;
         padding: 5px;
@@ -20,7 +21,7 @@
         height: 200px;
         width: 50%;
         top: 50%;
-        left: 50%;
+        left: 37.5%;
     }
 
 /* Footer */
@@ -58,7 +59,7 @@
         width: auto;
         height: 200px;
         top: 50%;
-        left: 25%;
+        left: 12.5%;
     }
 
 /* Title */
